--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="result">
-        <p>Paper covers rock. You win!</p>
+        <p>Begin by clicking rock, paper, or scissors!</p>
     </div>
 
     <div class="choices">
